--- a/meltube/play-video4.html
+++ b/meltube/play-video4.html
@@ -38,7 +38,7 @@
         <div class="row">
             <div class="play-video">
                 <video controls autoplay>
-                    <source src="../meltubevideos/copy_61C3A3EC-D7AA-4ACC-AFC2-A046138CFED2.mov">
+                    <source src="../meltubevideos/youaremyspecial_jSPrQb3C.mp4">
                 </video>
 
                 <div class="tags">
