--- a/meltube/play-video1.html
+++ b/meltube/play-video1.html
@@ -38,7 +38,7 @@
         <div class="row">
             <div class="play-video">
                 <video controls autoplay>
-                    <source src="../meltubevideos/PSY(ì¸ì´) - GANGNAM STYLE(ê°ë¨ì¤íì¼) Colour Coded Lyrics (Han_Rom_Eng) by Taefiedlyrics.mp4">
+                    <source src="../meltubevideos/PSY- GANGNAM STYLE.mp4">
                 </video>
 
                 <div class="tags">
@@ -216,7 +216,7 @@
                 </div>
 
                 <div class="side-video-list">
-                    <a href="" class="small-thumbnail"><img src="../img_meltube/capa8.png" alt=""></a>
+                    <a href="../meltube/play-video7.html" class="small-thumbnail"><img src="../img_meltube/capa8.png" alt=""></a>
                     <div class="vid-info">
                         <a href="">Cherry Blossom Longplay</a>
                         <p>Shrek xonado</p>
