--- a/meltube/play-video7.html
+++ b/meltube/play-video7.html
@@ -212,11 +212,11 @@
                 </div>
 
                 <div class="side-video-list">
-                    <a href="" class="small-thumbnail"><img src="../img_meltube/capa8.png" alt=""></a>
+                    <a href="../meltube/play-video1.html" class="small-thumbnail"><img src="../img_meltube/capa2.png" alt=""></a>
                     <div class="vid-info">
-                        <a href="">Cherry Blossom Longplay</a>
+                        <a href="">Gagnam Style Lyrics</a>
                         <p>Shrek xonado</p>
-                        <p>450k Views</p>
+                        <p>130M Views</p>
                     </div>
                 </div>
 
