--- a/meltube/play-video6.html
+++ b/meltube/play-video6.html
@@ -217,7 +217,7 @@
                 </div>
 
                 <div class="side-video-list">
-                    <a href="../meltube/play-video7s.html" class="small-thumbnail"><img src="../img_meltube/capa8.png" alt=""></a>
+                    <a href="../meltube/play-video7.html" class="small-thumbnail"><img src="../img_meltube/capa8.png" alt=""></a>
                     <div class="vid-info">
                         <a href="">Cherry Blossom Longplay</a>
                         <p>Shrek xonado</p>
