--- a/meltube/play-video7.html
+++ b/meltube/play-video7.html
@@ -167,7 +167,7 @@
 
 
                 <div class="side-video-list">
-                    <a href="" class="small-thumbnail"><img src="../img_meltube/capa3.png" alt=""></a>
+                    <a href="play-video2.html" class="small-thumbnail"><img src="../img_meltube/capa3.png" alt=""></a>
                     <div class="vid-info">
                         <a href="">Trai meu marido c/ a galdéria da Jessica</a>
                         <p>Sims da Galdéria</p>
@@ -176,7 +176,7 @@
                 </div>
 
                 <div class="side-video-list">
-                    <a href="" class="small-thumbnail"><img src="../img_meltube/capa4.png" alt=""></a>
+                    <a href="play-video3.html" class="small-thumbnail"><img src="../img_meltube/capa4.png" alt=""></a>
                     <div class="vid-info">
                         <a href="">BATALHA FATAL!</a>
                         <p>Aninhagameplays2011</p>
@@ -185,7 +185,7 @@
                 </div>
 
                 <div class="side-video-list">
-                    <a href="" class="small-thumbnail"><img src="../img_meltube/capa5.png" alt=""></a>
+                    <a href="play-video4.html" class="small-thumbnail"><img src="../img_meltube/capa5.png" alt=""></a>
                     <div class="vid-info">
                         <a href="">MORRERAM TODOS!</a>
                         <p>FukGege</p>
@@ -194,7 +194,7 @@
                 </div>
 
                 <div class="side-video-list">
-                    <a href="" class="small-thumbnail"><img src="../img_meltube/capa6.png" alt=""></a>
+                    <a href="play-video5.html" class="small-thumbnail"><img src="../img_meltube/capa6.png" alt=""></a>
                     <div class="vid-info">
                         <a href="">Fairy Tail do Roblox</a>
                         <p>rato gostoso</p>
@@ -203,7 +203,7 @@
                 </div>
 
                 <div class="side-video-list">
-                    <a href="" class="small-thumbnail"><img src="../img_meltube/capa7.png" alt=""></a>
+                    <a href="play-video6.html" class="small-thumbnail"><img src="../img_meltube/capa7.png" alt=""></a>
                     <div class="vid-info">
                         <a href="">Liga das Lendas (deixou me virgem até aos 40)</a>
                         <p>CJ do amor</p>
